fix(mobile): overflow issue with pagination

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -54,3 +54,13 @@
   min-width: 24px;
   text-align: center;
 }
+
+@include respond-below('mobile') {
+  .pagination {
+    gap: spacing(3);
+  }
+
+  .pages {
+    gap: spacing(3);
+  }
+}
